--- a/client/src/index.css
+++ b/client/src/index.css
@@ -45,12 +45,16 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    @apply font-heading font-semibold text-foreground;
-    font-family: 'Poppins', sans-serif;
+    @apply font-heading;
   }
 }
 
 @layer components {
+  .font-heading {
+    @apply font-semibold text-foreground;
+    font-family: 'Poppins', sans-serif;
+  }
+
   .button-hover {
     @apply transition-all duration-200;
   }
